force-app/main/default/objects/Merchandising_Mix__c/Merchandising_Mix__c.object-meta.xml
<CustomObject>
    <label>商品構成</label>
    <nameField>
        <label>商品構成名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>商品構成</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>