force-app/main/default/objects/Merchandising_Mix__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchandise Mixes</relationshipLabel>
    <relationshipName>Merchandising_Mixes</relationshipName>
    <type>Lookup</type>
</CustomField>