force-app/main/default/objects/Merchandising_Mix__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <label>確認番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>