force-app/main/default/objects/Merchandising_Mix__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>シーズン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018年 冬</fullName>
                <default>true</default>
                <label>2018年 冬</label>
            </value>
            <value>
                <fullName>2018年 春</fullName>
            </value>
            <value>
                <fullName>2018年 夏</fullName>
            </value>
            <value>
                <fullName>2018年 秋</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>