force-app/main/default/objects/Merchandising_Mix__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ドラフト</fullName>
                <default>true</default>
                <label>ドラフト</label>
            </value>
            <value>
                <fullName>製造部門へ送信済み</fullName>
            </value>
            <value>
                <fullName>製造部門から確認済み</fullName>
            </value>
            <value>
                <fullName>注文成立済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>