force-app/main/default/objects/Merchandising_Mix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>すべての商品構成</label>
</ListView>